k8s/deployment-quarkus.yml
apiVersion: v1
kind: Service
metadata:
  name: quarkus
  annotations:
    cloud.google.com/app-protocols: '{"https-port":"HTTPS","http-port":"HTTP"}'
  labels:
    app: quarkus
spec:
  ports:
    - name: https-port
      port: 8443
    - name: http-port
      port: 8081
  selector:
    app: quarkus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus
spec:
  selector:
    matchLabels:
      app: quarkus
  replicas: 3
  template:
    metadata:
      labels:
        app: quarkus
        version: v1
    spec:
      containers:
        - name: quarkus
#          image: eu.gcr.io/YOUR_PROJECT/quarkus:latest
          image: quarkus:latest
          imagePullPolicy: Never
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "512Mi"
          volumeMounts:
            - name: privatekey
              mountPath: "/etc/private_key"
              readOnly: true
            - name: publickey
              mountPath: "/etc/public_key"
              readOnly: true
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8081
            initialDelaySeconds: 200
            periodSeconds: 5
      volumes:
        - name: publickey
          secret:
            secretName: publickey
        - name: privatekey
          secret:
            secretName: privatekey
