k8s/deployment-spring-boot.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot
  annotations:
    cloud.google.com/app-protocols: '{"https-port":"HTTPS","http-port":"HTTP"}'
  labels:
    app: spring-boot
spec:
  ports:
    - name: https-port
      port: 8443
    - name: http-port
      port: 8084
  selector:
    app: spring-boot
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: spring-boot
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: spring-boot
        version: v1
    spec:
      containers:
        - name: spring-boot
          image: eu.gcr.io/x-alcove-270419/spring-boot:latest
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "512Mi"
          volumeMounts:
            - name: privatekey
              mountPath: "/etc/private_key"
              readOnly: true
            - name: publickey
              mountPath: "/etc/public_key"
              readOnly: true
          ports:
            - containerPort: 8084
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 200
            periodSeconds: 5
      volumes:
        - name: publickey
          secret:
            secretName: publickey
        - name: privatekey
          secret:
            secretName: privatekey
